fix the description pass behind the "Watch" button

--- a/src/app/styl/show_detail.styl
+++ b/src/app/styl/show_detail.styl
@@ -387,7 +387,7 @@
 		font-weight 100
 		line-height 20px
 		margin-top 10px
-		height calc(100% - 386px)
+		height calc(100% - 390px)
 		overflow-y auto
 		padding 10px 10px 10px 0
 		scrollable()
